--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "main": "html/signin.html",
-    "name": "Puhn",
-    "description": "Free instant messaging",
-    "version": "0.0.1",
-    "window": {
-        "icon": "img/logo500.png",
-        "toolbar": false,
-        "frame": false,
-        "resizable": false,
-        "width": 360,
-        "height": 480,
-        "min_width": 360,
-        "min_height": 480,
-        "max_width": 360,
-        "max_height": 480,
-        "position": "center"
-    },
-    "dependencies": {
-        "socket.io-client": ">= 0.9.16"
-    }
+  "main": "html/signin.html",
+  "name": "Puhn",
+  "description": "Free instant messaging",
+  "version": "0.0.1",
+  "window": {
+    "icon": "img/logo500.png",
+    "toolbar": false,
+    "frame": false,
+    "resizable": false,
+    "width": 360,
+    "height": 480,
+    "min_width": 360,
+    "min_height": 480,
+    "max_width": 360,
+    "max_height": 480,
+    "position": "center"
+  },
+  "dependencies": {
+    "socket.io-client": ">= 0.9.16",
+    "underscore": "^1.6.0"
+  }
 }
